--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
 			<!-- Menu -->
 			<ul>
 				<li><a href="https://gitcafe.com/activities">Gitcafe</a></li>
-				<li><a href="http://www.lofter.com/">Blog</a></li>
-				<li><a href="#">Others</a></li>
+				<li><a href="http://www.lofter.com/">Blog</a><small> （Lofter）</small></li>
+				<li><a href="http://www.npr.org/">NPR News</a></li>
+				<li><a href="http://weibo.com/yunlinmydear/home?wvr=5&sudaref=cn.bing.com">微博</a></li>
+				<li><a href="https://instagram.com/">Instagram</a></li>
+				<li><a href="http://www.zhihu.com/">知乎</a></li>
+				<li><a href="https://www.facebook.com/">Facebook</a></li>
+				<li><a href="https://www.quora.com/">Quora</a></li>
+				<li><a href="http://www.bilibili.com/">哔哩哔哩</a></li>
+				<li><a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a></li>
 			</ul>
 		</div>
 
@@ -34,45 +41,23 @@
 			菜单
 		</div>
 		<div class="container">
+			<div class="page-header">
+				<h1>theIndex <small>每天都有好心情~</small></h1>
+			</div>
+
 			<div class="row">
 
-				<div class="col-md-9">
-					<div class="page-header">
-						<h1>theIndex <small>每天都有好心情~</small></h1>
-					</div>
-
-					<div class="row">
-
-						<div class="col-md-5">
-							<div class="list-group">
-
-								<a href="http://www.npr.org/" class="list-group-item">
-									<h4>NPR News <small>看点新闻，听听英语</small></h4>
-								</a>
-
-								<a href="http://weibo.com/yunlinmydear/home?wvr=5&sudaref=cn.bing.com" class="list-group-item">
-									<h4>微博 </h4>
-								</a>
-
-								<a href="#" class="list-group-item">
-									<h4></h4>
-								</a>
-
-							</div>
+				<div class="col-md-7">
+					<div class="panel panel-primary">
+						<div class="panel-heading">
+							<h3 class="panel-title">课程表</h3>
 						</div>
-						<div class="col-md-7">
-							<div class="panel panel-primary">
-								<div class="panel-heading">
-									<h3 class="panel-title">Feed <small>我的更新</small></h3>
-								</div>
-								<div class="panel-body">
-									content
-								</div>
-							</div>
+						<div class="panel-body">
+							content
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-5">
 					<form>
 						<div class="form-group">
 							<textarea class="form-control status-box" rows="2" placeholder="What's on your mind?"></textarea>
