--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 				</div>
 			</div>
 		</div>
+		<div class="container">
+			<form action="http://dictionary.cambridge.org/search/british/direct/?utm_source=widget_searchbox_source&utm_medium=widget_searchbox&utm_campaign=widget_tracking" method="post"><table style="font-size: 10px; border: 1px solid black; background: #242C72 url('http://dictionary.cambridge.org/us/external/images/sbr.gif?version=2015-05-05-1048') no-repeat top right;" width="150px" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td colspan="2"><a href="http://dictionary.cambridge.org/" style="display:block; background: transparent url('http://dictionary.cambridge.org/us/external/images/sbl.gif?version=2015-05-05-1048') no-repeat 5px 6px; height: 32px;"></a></td></tr><tr><td width="68px" style="padding: 4px;"><input name="q" size="8" style="display:block; height: 100%;width: 100%; font-size:10px " type="text"/></td><td width="50px" style="padding: 0 4px 0 0;"><input width="100%" style="display:block; float: right; background: #92AE2E url('http://dictionary.cambridge.org/us/external/images/sbb.gif?version=2015-05-05-1048') repeat-x; border: 1px solid green; font-size:10px; padding: 2px 0;" type="submit" border="0" value="Look it up"/></td></tr></tbody></table></form>
+		</div>
 		
 		
 
