加入了课程表

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,20 +44,24 @@
 			<div class="page-header">
 				<h1>theIndex <small>每天都有好心情~</small></h1>
 			</div>
-
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+					<h3 class="panel-title">课程表</h3>
+				</div>
+				<div class="panel-body">
+					<iframe src="https://onedrive.live.com/embed?cid=FA72A04E8ABFFA8A&resid=FA72A04E8ABFFA8A%21260&authkey=AK-1ktNMUb3FngM&em=2" width="1080" height="500" frameborder="0" scrolling="no"></iframe>
+				</div>
+			</div>
+			</div>
+		</div>
+		<div class="container">
 			<div class="row">
 
-				<div class="col-md-7">
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							<h3 class="panel-title">My Feed</h3>
-						</div>
-						<div class="panel-body">
-							<a href="https://trello.com/">Trello</a>
-						</div>
-					</div>
-				</div>
 				<div class="col-md-5">
+					<form action="http://dictionary.cambridge.org/search/british/direct/?utm_source=widget_searchbox_source&utm_medium=widget_searchbox&utm_campaign=widget_tracking" method="post"><table style="font-size: 10px; border: 1px solid black; background: #242C72 url('http://dictionary.cambridge.org/us/external/images/sbr.gif?version=2015-05-05-1048') no-repeat top right;" width="450px" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td colspan="2"><a href="http://dictionary.cambridge.org/" style="display:block; background: transparent url('http://dictionary.cambridge.org/us/external/images/sbl.gif?version=2015-05-05-1048') no-repeat 5px 6px; height: 32px;"></a></td></tr><tr><td width="68px" style="padding: 4px;"><input name="q" size="8" style="display:block; height: 100%;width: 100%; font-size:10px " type="text"/></td><td width="50px" style="padding: 0 4px 0 0;"><input width="100%" style="display:block; float: right; background: #92AE2E url('http://dictionary.cambridge.org/us/external/images/sbb.gif?version=2015-05-05-1048') repeat-x; border: 1px solid green; font-size:10px; padding: 2px 0;" type="submit" border="0" value="Look it up"/></td></tr></tbody></table></form>
+				</div>
+				
+				<div class="col-md-7">
 					<form>
 						<div class="form-group">
 							<textarea class="form-control status-box" rows="2" placeholder="What's on your mind?"></textarea>
@@ -71,12 +75,9 @@
 					<ul class="posts">
 					</ul>
 				</div>
-			</div>
+			
 		</div>
-		<div class="container">
-			<form action="http://dictionary.cambridge.org/search/british/direct/?utm_source=widget_searchbox_source&utm_medium=widget_searchbox&utm_campaign=widget_tracking" method="post"><table style="font-size: 10px; border: 1px solid black; background: #242C72 url('http://dictionary.cambridge.org/us/external/images/sbr.gif?version=2015-05-05-1048') no-repeat top right;" width="150px" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td colspan="2"><a href="http://dictionary.cambridge.org/" style="display:block; background: transparent url('http://dictionary.cambridge.org/us/external/images/sbl.gif?version=2015-05-05-1048') no-repeat 5px 6px; height: 32px;"></a></td></tr><tr><td width="68px" style="padding: 4px;"><input name="q" size="8" style="display:block; height: 100%;width: 100%; font-size:10px " type="text"/></td><td width="50px" style="padding: 0 4px 0 0;"><input width="100%" style="display:block; float: right; background: #92AE2E url('http://dictionary.cambridge.org/us/external/images/sbb.gif?version=2015-05-05-1048') repeat-x; border: 1px solid green; font-size:10px; padding: 2px 0;" type="submit" border="0" value="Look it up"/></td></tr></tbody></table></form>
-		</div>
-		
+		<footer>@Mileber</footer>
 		
 
 
